# elecciones

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  introduccion.rst
src/: elecciones.py
