[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "elecciones"
authors = [{name = "Patricio Paez", email = "pp@pp.com.mx"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = ["sphinx"]
